cleanup and documentation

--- a/electricity_rates/elecricity_week.ipynb
+++ b/electricity_rates/elecricity_week.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Electricity Usage and Feed In Analysis\n",
+    "\n",
+    "This notebook contains a visualisation of the electricity usage and electricity fed back into the network at 3 different addresses: 1MC, 23OLR, and Ardamine."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -85,9 +94,12 @@
     "ax.plot(usage_data_23_day['Date'], usage_data_23_day[0], label='Usage', color='royalblue', alpha=0.9)\n",
     "ax.xaxis.set_major_locator(months)\n",
     "fig.autofmt_xdate()\n",
-    "plt.title('23 O\\' Leary Road')\n",
+    "plt.title('23OLR')\n",
     "plt.gca().set_xbound(datetime.date(2024, 1, 24),datetime.date(2025, 1, 23))\n",
     "plt.gca().set_ybound(0,12)\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('kWh')\n",
+    "plt.grid(visible=True, which='major', axis='both', linestyle='--', alpha\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -96,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -143,16 +155,19 @@
     "plt.bar(x4,y4, width=25, alpha=0.25, color='royalblue')\n",
     "ax.xaxis.set_major_locator(months)\n",
     "fig.autofmt_xdate()\n",
-    "plt.title('23 O\\' Leary Road')\n",
+    "plt.title('23OLR')\n",
     "plt.gca().set_xbound(datetime.date(2024, 1, 15),datetime.date(2025, 1, 18))\n",
     "plt.gca().set_ybound(0,6)\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('kWh')\n",
+    "plt.grid(visible=True, which='major', axis='both', linestyle='--', alpha\n",
     "plt.legend()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,13 +205,16 @@
     "# ax.xaxis_date()\n",
     "ax.xaxis.set_major_locator(months)\n",
     "fig.autofmt_xdate()\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('kWh')\n",
+    "plt.grid(visible=True, which='major', axis='both', linestyle='--', alpha\n",
     "plt.title('Ardamine')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -246,9 +264,12 @@
     "\n",
     "ax.xaxis.set_major_locator(months)\n",
     "fig.autofmt_xdate()\n",
-    "plt.title('1 Murray\\'s Cottages')\n",
+    "plt.title('1MC')\n",
     "plt.gca().set_xbound(datetime.date(2024, 1, 24),datetime.date(2025, 1, 1))\n",
     "plt.gca().set_ybound(0,12)\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('kWh')\n",
+    "plt.grid(visible=True, which='major', axis='both', linestyle='--', alpha\n",
     "plt.legend()\n",
     "plt.show()"
    ]
