--- a/electricity_rates/electricity.ipynb
+++ b/electricity_rates/electricity.ipynb
@@ -1,18 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Electricity Usage Analysis for 23OLR\n",
+    "\n",
+    "This notebook contains an analysis of electricity usage for the address 23OLR.\n",
+    "\n",
+    "It tallies the totals for each rate stratification and checks them against several tariffs available to determine the best available option."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -405,8 +415,8 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('electricity.csv', header=1, index_col=0)\n",
-    "data"
+    "data = pd.read_csv('data/electricity.csv', header=1, index_col=0)\n",
+    "data.head()"
    ]
   },
   {
@@ -419,7 +429,7 @@
     "\n",
     "11pm to 8am is night rate\n",
     "\n",
-    "2am to 5am is ev rate\n",
+    "2am to 5am is ev rate*\n",
     "\n",
     "*2am to 6am for some rates"
    ]
@@ -746,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -783,23 +793,23 @@
        "      <td>264.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Data</th>\n",
+       "      <th>Energia S Data</th>\n",
        "      <td>174.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Drive</th>\n",
+       "      <th>Energia S Drive</th>\n",
        "      <td>202.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BG S EV DFD</th>\n",
+       "      <th>Board Gais S EV Dual Fuel D</th>\n",
        "      <td>174.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Data DF</th>\n",
+       "      <th>Energia S Data Dual Fuel</th>\n",
        "      <td>184.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FG DF S</th>\n",
+       "      <th>Flogas Dual Fuel S</th>\n",
        "      <td>228.39</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -807,14 +817,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                Cost\n",
-       "SSE EV        188.58\n",
-       "SSE 24        264.23\n",
-       "En S Data     174.23\n",
-       "En S Drive    202.11\n",
-       "BG S EV DFD   174.70\n",
-       "En S Data DF  184.65\n",
-       "FG DF S       228.39"
+       "                               Cost\n",
+       "SSE EV                       188.58\n",
+       "SSE 24                       264.23\n",
+       "Energia S Data               174.23\n",
+       "Energia S Drive              202.11\n",
+       "Board Gais S EV Dual Fuel D  174.70\n",
+       "Energia S Data Dual Fuel     184.65\n",
+       "Flogas Dual Fuel S           228.39"
       ]
      },
      "execution_count": 16,
@@ -823,18 +833,71 @@
     }
    ],
    "source": [
-    "d = {'SSE EV':[f\"{SSE_EV_total:.2f}\"],\n",
+    "d = {'Previous Rates':[f\"{olr2024:.2f}\"],\n",
+    "     'SSE EV':[f\"{SSE_EV_total:.2f}\"],\n",
     "     'SSE 24':[f\"{SSE_24_total:.2f}\"],\n",
-    "     'En S Data':[f\"{EN_S_DATA_total:.2f}\"],\n",
-    "     'En S Drive':[f\"{EN_S_Drive_total:.2f}\"],\n",
-    "     'BG S EV DFD':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
-    "     'En S Data DF':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
-    "     'FG DF S':[f\"{FG_DF_S_total:.2f}\"]   \n",
+    "     'Energia S Data':[f\"{EN_S_DATA_total:.2f}\"],\n",
+    "     'Energia S Drive':[f\"{EN_S_Drive_total:.2f}\"],\n",
+    "     'Board Gais S EV Dual Fuel D':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
+    "     'Energia S Data Dual Fuel':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
+    "     'Flogas Dual Fuel S':[f\"{FG_DF_S_total:.2f}\"]   \n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data=d).T.rename(columns={0:'Cost'})\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Energia S Data</th>\n",
+       "      <td>174.23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Cost\n",
+       "Energia S Data  174.23"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Cost'] == df['Cost'].min()]"
    ]
   }
  ],
@@ -854,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
