--- a/electricity_rates/1mc.ipynb
+++ b/electricity_rates/1mc.ipynb
@@ -1,18 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "# Electricity Usage Analysis for 1MC\n",
+    "\n",
+    "This notebook contains an analysis of electricity usage for the address 1MC.\n",
+    "\n",
+    "It tallies the totals for each rate stratification and checks them against several tariffs available to determine the best available option."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,153 +214,9 @@
        "      <td>0.249</td>\n",
        "      <td>0.325</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-27</th>\n",
-       "      <td>0.323</td>\n",
-       "      <td>0.327</td>\n",
-       "      <td>0.341</td>\n",
-       "      <td>0.352</td>\n",
-       "      <td>1.018</td>\n",
-       "      <td>1.037</td>\n",
-       "      <td>0.936</td>\n",
-       "      <td>0.637</td>\n",
-       "      <td>0.345</td>\n",
-       "      <td>0.330</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.466</td>\n",
-       "      <td>0.394</td>\n",
-       "      <td>0.442</td>\n",
-       "      <td>0.450</td>\n",
-       "      <td>0.444</td>\n",
-       "      <td>0.415</td>\n",
-       "      <td>0.964</td>\n",
-       "      <td>1.113</td>\n",
-       "      <td>0.915</td>\n",
-       "      <td>0.762</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-28</th>\n",
-       "      <td>0.580</td>\n",
-       "      <td>0.470</td>\n",
-       "      <td>0.455</td>\n",
-       "      <td>0.443</td>\n",
-       "      <td>1.156</td>\n",
-       "      <td>1.135</td>\n",
-       "      <td>1.062</td>\n",
-       "      <td>0.789</td>\n",
-       "      <td>0.445</td>\n",
-       "      <td>0.472</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-29</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.767</td>\n",
-       "      <td>0.733</td>\n",
-       "      <td>0.405</td>\n",
-       "      <td>0.040</td>\n",
-       "      <td>0.039</td>\n",
-       "      <td>0.040</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-30</th>\n",
-       "      <td>0.017</td>\n",
-       "      <td>0.036</td>\n",
-       "      <td>0.036</td>\n",
-       "      <td>0.037</td>\n",
-       "      <td>0.675</td>\n",
-       "      <td>0.731</td>\n",
-       "      <td>0.582</td>\n",
-       "      <td>0.290</td>\n",
-       "      <td>0.083</td>\n",
-       "      <td>0.080</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-31</th>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.730</td>\n",
-       "      <td>0.642</td>\n",
-       "      <td>0.263</td>\n",
-       "      <td>0.073</td>\n",
-       "      <td>0.081</td>\n",
-       "      <td>0.079</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.022</td>\n",
-       "      <td>0.036</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>366 rows × 48 columns</p>\n",
+       "<p>5 rows × 48 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -361,12 +227,6 @@
        "2024-01-03  0.254  0.174  0.094  0.093  0.124  0.105  0.126  0.078  0.083   \n",
        "2024-01-04  0.254  0.157  0.073  0.062  0.058  0.062  0.059  0.060  0.056   \n",
        "2024-01-05  0.069  0.057  0.061  0.060  0.074  0.107  0.135  0.089  0.056   \n",
-       "...           ...    ...    ...    ...    ...    ...    ...    ...    ...   \n",
-       "2024-12-27  0.323  0.327  0.341  0.352  1.018  1.037  0.936  0.637  0.345   \n",
-       "2024-12-28  0.580  0.470  0.455  0.443  1.156  1.135  1.062  0.789  0.445   \n",
-       "2024-12-29  0.000  0.000  0.000  0.000  0.767  0.733  0.405  0.040  0.039   \n",
-       "2024-12-30  0.017  0.036  0.036  0.037  0.675  0.731  0.582  0.290  0.083   \n",
-       "2024-12-31  0.000  0.000  0.000  0.000  0.730  0.642  0.263  0.073  0.081   \n",
        "\n",
        "            04:30  ...  19:00  19:30  20:00  20:30  21:00  21:30  22:00  \\\n",
        "Date               ...                                                    \n",
@@ -375,12 +235,6 @@
        "2024-01-03  0.056  ...  0.347  0.347  0.254  0.204  0.208  0.356  0.176   \n",
        "2024-01-04  0.065  ...  0.829  0.398  0.436  0.492  0.459  0.469  0.292   \n",
        "2024-01-05  0.058  ...  0.342  0.346  0.367  0.410  0.389  0.264  0.280   \n",
-       "...           ...  ...    ...    ...    ...    ...    ...    ...    ...   \n",
-       "2024-12-27  0.330  ...  0.466  0.394  0.442  0.450  0.444  0.415  0.964   \n",
-       "2024-12-28  0.472  ...  0.000  0.000  0.000  0.000  0.000  0.000  0.000   \n",
-       "2024-12-29  0.040  ...  0.000  0.000  0.000  0.000  0.000  0.000  0.000   \n",
-       "2024-12-30  0.080  ...  0.000  0.000  0.000  0.000  0.000  0.000  0.000   \n",
-       "2024-12-31  0.079  ...  0.000  0.000  0.000  0.000  0.000  0.000  0.000   \n",
        "\n",
        "            22:30  23:00  23:30  \n",
        "Date                             \n",
@@ -389,24 +243,18 @@
        "2024-01-03  0.215  0.249  0.242  \n",
        "2024-01-04  0.269  0.188  0.100  \n",
        "2024-01-05  0.256  0.249  0.325  \n",
-       "...           ...    ...    ...  \n",
-       "2024-12-27  1.113  0.915  0.762  \n",
-       "2024-12-28  0.000  0.000  0.000  \n",
-       "2024-12-29  0.000  0.000  0.000  \n",
-       "2024-12-30  0.000  0.000  0.000  \n",
-       "2024-12-31  0.000  0.022  0.036  \n",
        "\n",
-       "[366 rows x 48 columns]"
+       "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('1MC2024.csv', header=1, index_col=0)\n",
-    "data"
+    "data = pd.read_csv('data/1MC2024.csv', header=1, index_col=0)\n",
+    "data.head()"
    ]
   },
   {
@@ -426,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +399,7 @@
        "405.34449595"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +421,7 @@
        "423.14563525"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +443,7 @@
        "404.2082183"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +465,7 @@
        "321.93631450000004"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +487,7 @@
        "434.91507090000005"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +509,7 @@
        "372.88995835000003"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +531,7 @@
        "341.1519361"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +553,7 @@
        "389.319808"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -755,23 +603,23 @@
        "      <td>423.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Data</th>\n",
+       "      <th>Energia S Data</th>\n",
        "      <td>321.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Drive</th>\n",
+       "      <th>Energia S Drive</th>\n",
        "      <td>434.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BG S EV DFD</th>\n",
+       "      <th>Board Gais S EV DFD</th>\n",
        "      <td>372.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Data DF</th>\n",
+       "      <th>Energia S Data DF</th>\n",
        "      <td>341.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FG DF S</th>\n",
+       "      <th>Flogas Dual Fuel S</th>\n",
        "      <td>389.32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -779,17 +627,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                Cost\n",
-       "SSE EV        405.34\n",
-       "SSE 24        423.15\n",
-       "En S Data     321.94\n",
-       "En S Drive    434.92\n",
-       "BG S EV DFD   372.89\n",
-       "En S Data DF  341.15\n",
-       "FG DF S       389.32"
+       "                       Cost\n",
+       "SSE EV               405.34\n",
+       "SSE 24               423.15\n",
+       "Energia S Data       321.94\n",
+       "Energia S Drive      434.92\n",
+       "Board Gais S EV DFD  372.89\n",
+       "Energia S Data DF    341.15\n",
+       "Flogas Dual Fuel S   389.32"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,16 +645,68 @@
    "source": [
     "d = {'SSE EV':[f\"{SSE_EV_total:.2f}\"],\n",
     "     'SSE 24':[f\"{SSE_24_total:.2f}\"],\n",
-    "     'En S Data':[f\"{EN_S_DATA_total:.2f}\"],\n",
-    "     'En S Drive':[f\"{EN_S_Drive_total:.2f}\"],\n",
-    "     'BG S EV DFD':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
-    "     'En S Data DF':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
-    "     'FG DF S':[f\"{FG_DF_S_total:.2f}\"]   \n",
+    "     'Energia S Data':[f\"{EN_S_DATA_total:.2f}\"],\n",
+    "     'Energia S Drive':[f\"{EN_S_Drive_total:.2f}\"],\n",
+    "     'Board Gais S EV DFD':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
+    "     'Energia S Data DF':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
+    "     'Flogas Dual Fuel S':[f\"{FG_DF_S_total:.2f}\"]   \n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data=d).T.rename(columns={0:'Cost'})\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Energia S Data</th>\n",
+       "      <td>321.94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Cost\n",
+       "Energia S Data  321.94"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Cost'] == df['Cost'].min()]"
    ]
   }
  ],
@@ -826,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
