--- a/electricity_rates/ardamine.ipynb
+++ b/electricity_rates/ardamine.ipynb
@@ -1,14 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Electricity Usage Analysis for Ardamine\n",
+    "\n",
+    "This notebook contains an analysis of electricity usage for the address Ardamine.\n",
+    "\n",
+    "It tallies the totals for each rate stratification and checks them against several tariffs available to determine the best available option."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import dataframe_image as dfi"
+    "import pandas as pd"
    ]
   },
   {
@@ -406,7 +415,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('Ardamine 2024.csv', header=1, index_col=0)\n",
+    "data = pd.read_csv('data/Ardamine 2024.csv', header=1, index_col=0)\n",
     "data"
    ]
   },
@@ -809,6 +818,58 @@
     "\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>En S Data</th>\n",
+       "      <td>370.78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Cost\n",
+       "En S Data  370.78"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Cost'] == df['Cost'].min()]"
+   ]
   }
  ],
  "metadata": {
@@ -827,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
