--- a/electricity_rates/1mc.ipynb
+++ b/electricity_rates/1mc.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import necessary libraries\n",
     "import pandas as pd"
    ]
   },
@@ -253,6 +254,7 @@
     }
    ],
    "source": [
+    "# read the CSV file into a DataFrame\n",
     "data = pd.read_csv('data/1MC2024.csv', header=1, index_col=0)\n",
     "data.head()"
    ]
@@ -322,6 +324,7 @@
     }
    ],
    "source": [
+    "# print totals\n",
     "print(day_total)\n",
     "print(peak_total)\n",
     "print(night_total)\n",
@@ -405,6 +408,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for SSE EV\n",
     "SSE_EV_total = rates['SSE EV']['day'] * day_total + rates['SSE EV']['peak'] * peak_total + rates['SSE EV']['night'] * night_total + rates['SSE EV']['ev'] * ev_total\n",
     "\n",
     "SSE_EV_total"
@@ -427,6 +431,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for SSE 24\n",
     "SSE_24_total = rates['SSE 24']['day'] * day_total + rates['SSE 24']['peak'] * peak_total + rates['SSE 24']['night'] * night_total + rates['SSE 24']['ev'] * ev_total\n",
     "\n",
     "SSE_24_total"
@@ -449,6 +454,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for En S EV\n",
     "EN_S_EV_total = rates['En S EV']['day'] * day_total + rates['En S EV']['peak'] * peak_total + rates['En S EV']['night'] * night2_total + rates['En S EV']['ev'] * ev2_total\n",
     "\n",
     "EN_S_EV_total"
@@ -471,6 +477,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for En S Data\n",
     "EN_S_DATA_total = rates['En S Data']['day'] * day_total + rates['En S Data']['peak'] * peak_total + rates['En S Data']['night'] * night2_total + rates['En S Data']['ev'] * ev2_total\n",
     "\n",
     "EN_S_DATA_total"
@@ -493,6 +500,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for En S Drive\n",
     "EN_S_Drive_total = rates['En S Drive']['day'] * day_total + rates['En S Drive']['peak'] * peak_total + rates['En S Drive']['night'] * night2_total + rates['En S Drive']['ev'] * ev2_total\n",
     "\n",
     "EN_S_Drive_total"
@@ -515,6 +523,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for BG S EV DFD\n",
     "BG_S_EV_DFD_total = rates['BG S EV DFD']['day'] * day_total + rates['BG S EV DFD']['peak'] * peak_total + rates['BG S EV DFD']['night'] * night2_total + rates['BG S EV DFD']['ev'] * ev2_total\n",
     "\n",
     "BG_S_EV_DFD_total"
@@ -537,6 +546,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for En S Data DF\n",
     "EN_S_DATA_DF_total = rates['En S Data DF']['day'] * day_total + rates['En S Data DF']['peak'] * peak_total + rates['En S Data DF']['night'] * night2_total + rates['En S Data DF']['ev'] * ev2_total\n",
     "\n",
     "EN_S_DATA_DF_total"
@@ -559,6 +569,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for FG S Data DF\n",
     "FG_DF_S_total = rates['FG DF S']['day'] * day_total + rates['FG DF S']['peak'] * peak_total + rates['FG DF S']['night'] * night2_total + rates['FG DF S']['ev'] * ev2_total\n",
     "\n",
     "FG_DF_S_total"
@@ -566,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -643,12 +654,14 @@
     }
    ],
    "source": [
+    "# create summary DataFrame\n",
+    "\n",
     "d = {'SSE EV':[f\"{SSE_EV_total:.2f}\"],\n",
     "     'SSE 24':[f\"{SSE_24_total:.2f}\"],\n",
     "     'Energia S Data':[f\"{EN_S_DATA_total:.2f}\"],\n",
     "     'Energia S Drive':[f\"{EN_S_Drive_total:.2f}\"],\n",
-    "     'Board Gais S EV DFD':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
-    "     'Energia S Data DF':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
+    "     'Board Gais S EV Dual Fuel D':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
+    "     'Energia S Data Dual Fuel':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
     "     'Flogas Dual Fuel S':[f\"{FG_DF_S_total:.2f}\"]   \n",
     "}\n",
     "\n",
@@ -706,6 +719,7 @@
     }
    ],
    "source": [
+    "# find the cheapest rate\n",
     "df[df['Cost'] == df['Cost'].min()]"
    ]
   }
