--- a/electricity_rates/ardamine.ipynb
+++ b/electricity_rates/ardamine.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import necessary libraries\n",
     "import pandas as pd"
    ]
   },
@@ -415,6 +416,7 @@
     }
    ],
    "source": [
+    "# read the CSV file with appropriate parameters\n",
     "data = pd.read_csv('data/Ardamine 2024.csv', header=1, index_col=0)\n",
     "data"
    ]
@@ -484,6 +486,7 @@
     }
    ],
    "source": [
+    "# print totals\n",
     "print(day_total)\n",
     "print(peak_total)\n",
     "print(night_total)\n",
@@ -567,6 +570,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for SSE EV\n",
     "SSE_EV_total = rates['SSE EV']['day'] * day_total + rates['SSE EV']['peak'] * peak_total + rates['SSE EV']['night'] * night_total + rates['SSE EV']['ev'] * ev_total\n",
     "\n",
     "SSE_EV_total"
@@ -589,6 +593,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for SSE 24\n",
     "SSE_24_total = rates['SSE 24']['day'] * day_total + rates['SSE 24']['peak'] * peak_total + rates['SSE 24']['night'] * night_total + rates['SSE 24']['ev'] * ev_total\n",
     "\n",
     "SSE_24_total"
@@ -611,6 +616,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for En S EV\n",
     "EN_S_EV_total = rates['En S EV']['day'] * day_total + rates['En S EV']['peak'] * peak_total + rates['En S EV']['night'] * night2_total + rates['En S EV']['ev'] * ev2_total\n",
     "\n",
     "EN_S_EV_total"
@@ -633,6 +639,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for En S Data\n",
     "EN_S_DATA_total = rates['En S Data']['day'] * day_total + rates['En S Data']['peak'] * peak_total + rates['En S Data']['night'] * night2_total + rates['En S Data']['ev'] * ev2_total\n",
     "\n",
     "EN_S_DATA_total"
@@ -655,6 +662,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for En S Drive\n",
     "EN_S_Drive_total = rates['En S Drive']['day'] * day_total + rates['En S Drive']['peak'] * peak_total + rates['En S Drive']['night'] * night2_total + rates['En S Drive']['ev'] * ev2_total\n",
     "\n",
     "EN_S_Drive_total"
@@ -677,6 +685,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for BG S EV DFD\n",
     "BG_S_EV_DFD_total = rates['BG S EV DFD']['day'] * day_total + rates['BG S EV DFD']['peak'] * peak_total + rates['BG S EV DFD']['night'] * night2_total + rates['BG S EV DFD']['ev'] * ev2_total\n",
     "\n",
     "BG_S_EV_DFD_total"
@@ -699,6 +708,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for En S Data DF\n",
     "EN_S_DATA_DF_total = rates['En S Data DF']['day'] * day_total + rates['En S Data DF']['peak'] * peak_total + rates['En S Data DF']['night'] * night2_total + rates['En S Data DF']['ev'] * ev2_total\n",
     "\n",
     "EN_S_DATA_DF_total"
@@ -721,6 +731,7 @@
     }
    ],
    "source": [
+    "# calculate total cost for FG S Data DF\n",
     "FG_DF_S_total = rates['FG DF S']['day'] * day_total + rates['FG DF S']['peak'] * peak_total + rates['FG DF S']['night'] * night2_total + rates['FG DF S']['ev'] * ev2_total\n",
     "\n",
     "FG_DF_S_total"
@@ -765,23 +776,23 @@
        "      <td>577.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Data</th>\n",
+       "      <th>Energia S Data</th>\n",
        "      <td>370.78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Drive</th>\n",
+       "      <th>Energia S Drive</th>\n",
        "      <td>692.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BG S EV DFD</th>\n",
+       "      <th>Board Gais S EV DFD</th>\n",
        "      <td>512.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>En S Data DF</th>\n",
+       "      <th>Energia S Data DF</th>\n",
        "      <td>392.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FG DF S</th>\n",
+       "      <th>Flogas DF S</th>\n",
        "      <td>493.11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -789,14 +800,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                Cost\n",
-       "SSE EV        504.96\n",
-       "SSE 24        577.26\n",
-       "En S Data     370.78\n",
-       "En S Drive    692.83\n",
-       "BG S EV DFD   512.63\n",
-       "En S Data DF  392.96\n",
-       "FG DF S       493.11"
+       "                       Cost\n",
+       "SSE EV               504.96\n",
+       "SSE 24               577.26\n",
+       "Energia S Data       370.78\n",
+       "Energia S Drive      692.83\n",
+       "Board Gais S EV DFD  512.63\n",
+       "Energia S Data DF    392.96\n",
+       "Flogas DF S          493.11"
       ]
      },
      "execution_count": 15,
@@ -805,13 +816,15 @@
     }
    ],
    "source": [
+    "# create summary dataframe\n",
+    "\n",
     "d = {'SSE EV':[f\"{SSE_EV_total:.2f}\"],\n",
     "     'SSE 24':[f\"{SSE_24_total:.2f}\"],\n",
-    "     'En S Data':[f\"{EN_S_DATA_total:.2f}\"],\n",
-    "     'En S Drive':[f\"{EN_S_Drive_total:.2f}\"],\n",
-    "     'BG S EV DFD':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
-    "     'En S Data DF':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
-    "     'FG DF S':[f\"{FG_DF_S_total:.2f}\"]   \n",
+    "     'Energia S Data':[f\"{EN_S_DATA_total:.2f}\"],\n",
+    "     'Energia S Drive':[f\"{EN_S_Drive_total:.2f}\"],\n",
+    "     'Board Gais S EV DFD':[f\"{BG_S_EV_DFD_total:.2f}\"],\n",
+    "     'Energia S Data DF':[f\"{EN_S_DATA_DF_total:.2f}\"],\n",
+    "     'Flogas DF S':[f\"{FG_DF_S_total:.2f}\"]   \n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data=d).T.rename(columns={0:'Cost'})\n",
@@ -850,7 +863,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>En S Data</th>\n",
+       "      <th>Energia S Data</th>\n",
        "      <td>370.78</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -858,8 +871,8 @@
        "</div>"
       ],
       "text/plain": [
-       "             Cost\n",
-       "En S Data  370.78"
+       "                  Cost\n",
+       "Energia S Data  370.78"
       ]
      },
      "execution_count": 16,
@@ -868,6 +881,7 @@
     }
    ],
    "source": [
+    "# find the cheapest rate\n",
     "df[df['Cost'] == df['Cost'].min()]"
    ]
   }
