--- a/electricity_rates/elecricity_week.ipynb
+++ b/electricity_rates/elecricity_week.ipynb
@@ -11,10 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import necessary libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,10 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load data\n",
     "usage_data_23 = pd.read_csv('electricity.csv', header=1, index_col=0).T\n",
     "usage_data_1mc = pd.read_csv('1MC2024.csv', header=1, index_col=0).T\n",
     "usage_data_arda = pd.read_csv('Ardamine 2024.csv', header=1, index_col=0).T\n",
@@ -37,37 +39,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Enable copy on write mode\n",
     "pd.options.mode.copy_on_write = True\n",
     "\n",
+    "# Process usage data\n",
     "usage_data_23_day = usage_data_23.sum().reset_index()\n",
     "usage_data_1mc_day = usage_data_1mc.sum().reset_index()\n",
     "usage_data_arda_day = usage_data_arda.sum().reset_index()\n",
     "\n",
+    "# Convert 'Date' column to datetime\n",
     "usage_data_23_day['Date'] = mdates.num2date(mdates.date2num(usage_data_23_day['Date']))\n",
     "usage_data_1mc_day['Date'] = mdates.num2date(mdates.date2num(usage_data_1mc_day['Date']))\n",
     "usage_data_arda_day['Date'] = mdates.num2date(mdates.date2num(usage_data_arda_day['Date']))\n",
     "\n",
+    "# Calculate monthly averages\n",
     "usage_data_23_month_avg = usage_data_23_day.groupby(pd.Grouper(key='Date', freq='1MS')).mean().reset_index()\n",
     "usage_data_1mc_month_avg = usage_data_1mc_day.groupby(pd.Grouper(key='Date', freq='1MS')).mean().reset_index()\n",
     "usage_data_arda_month_avg = usage_data_arda_day.groupby(pd.Grouper(key='Date', freq='1MS')).mean().reset_index()\n",
     "\n",
+    "# Process import/export data\n",
     "import_export_data_1mc['Date'] = pd.to_datetime(import_export_data_1mc['Read Date and End Time'], dayfirst=True)\n",
     "import_export_data_1mc_day = import_export_data_1mc.groupby(['Read Type',pd.Grouper(key='Date', freq='1D')]).sum().reset_index()\n",
     "export_data_1mc = import_export_data_1mc_day[import_export_data_1mc_day['Read Type'] == 'Active Export Interval (kWh)']\n",
     "export_data_1mc_day = export_data_1mc.groupby(['Read Type',pd.Grouper(key='Date', freq='1D')]).sum().reset_index()\n",
     "export_data_1mc_month_avg = export_data_1mc_day.loc[:,['Date','Read Value']].groupby([pd.Grouper(key='Date', freq='1MS')]).mean().reset_index()\n",
     "\n",
+    "# Process import/export data for 2023\n",
     "import_export_data_23['Date'] = pd.to_datetime(import_export_data_23['Read Date and End Time'], dayfirst=True)\n",
     "export_data_23 = import_export_data_23[import_export_data_23['Read Type'] == 'Active Export Interval (kWh)']\n",
     "export_data_23_day = export_data_23.groupby(['Read Type',pd.Grouper(key='Date', freq='1D')]).sum().reset_index()\n",
     "export_data_23_month = export_data_23.groupby([pd.Grouper(key='Date', freq='1MS')]).sum().reset_index()\n",
-    "export_data_23_month_avg = export_data_23_day.loc[:,['Date','Read Value']].groupby([pd.Grouper(key='Date', freq='1MS')]).mean().reset_index()\n",
-    "\n",
-    "\n"
+    "export_data_23_month_avg = export_data_23_day.loc[:,['Date','Read Value']].groupby([pd.Grouper(key='Date', freq='1MS')]).mean().reset_index()"
    ]
   },
   {
@@ -87,6 +93,7 @@
     }
    ],
    "source": [
+    "# Plot data for 23OLR\n",
     "fig, ax = plt.subplots()\n",
     "months = mdates.MonthLocator()\n",
     "\n",
@@ -123,6 +130,8 @@
     }
    ],
    "source": [
+    "# Plot data for 23OLR with trend lines and monthly averages\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "months = mdates.MonthLocator()\n",
     "\n",
@@ -146,11 +155,8 @@
     "dd1 = mdates.num2date(xp1)\n",
     "dd2 = mdates.num2date(xp2)\n",
     "\n",
-    "\n",
-    "# ax.plot(x1, y1, label='To Grid', color='tab:orange', alpha=0.75)\n",
     "ax.plot(dd1, p1(xp1), label='To Grid', color='tab:orange', alpha=0.75)\n",
     "plt.bar(x3,y3, width=25, alpha=0.25, color='tab:orange')\n",
-    "# ax.plot(x2, y2, label='Usage', color='royalblue', alpha=0.9)\n",
     "ax.plot(dd2, p2(xp2), label='Usage', color='royalblue', alpha=0.9)\n",
     "plt.bar(x4,y4, width=25, alpha=0.25, color='royalblue')\n",
     "ax.xaxis.set_major_locator(months)\n",
@@ -182,6 +188,8 @@
     }
    ],
    "source": [
+    "# Plot data for Ardamine with trend lines and monthly averages\n",
+    "\n",
     "x = usage_data_arda_day['Date']\n",
     "y = usage_data_arda_day[0]\n",
     "\n",
@@ -229,6 +237,8 @@
     }
    ],
    "source": [
+    "# Plot data for 1MC with trend lines and monthly averages\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "months = mdates.MonthLocator()\n",
     "\n",
