--- a/electricity_rates/electricity.ipynb
+++ b/electricity_rates/electricity.ipynb
@@ -13,10 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import necessary libraries\n",
     "import pandas as pd"
    ]
   },
@@ -415,6 +416,7 @@
     }
    ],
    "source": [
+    "# load the data\n",
     "data = pd.read_csv('data/electricity.csv', header=1, index_col=0)\n",
     "data.head()"
    ]
@@ -469,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -484,6 +486,7 @@
     }
    ],
    "source": [
+    "# print totals\n",
     "print(day_total)\n",
     "print(peak_total)\n",
     "print(night_total)\n",
@@ -558,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -573,6 +576,7 @@
     }
    ],
    "source": [
+    "# calculate the total cost for SSE EV\n",
     "SSE_EV_total = rates['SSE EV']['day'] * day_total + rates['SSE EV']['peak'] * peak_total + rates['SSE EV']['night'] * night_total + rates['SSE EV']['ev'] * ev_total\n",
     "\n",
     "SSE_EV_total"
@@ -580,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -595,6 +599,7 @@
     }
    ],
    "source": [
+    "# calculate the total cost for SSE 24\n",
     "SSE_24_total = rates['SSE 24']['day'] * day_total + rates['SSE 24']['peak'] * peak_total + rates['SSE 24']['night'] * night_total + rates['SSE 24']['ev'] * ev_total\n",
     "\n",
     "SSE_24_total"
@@ -602,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -617,6 +622,7 @@
     }
    ],
    "source": [
+    "# calculate the total cost for EN S EV\n",
     "EN_S_EV_total = rates['En S EV']['day'] * day_total + rates['En S EV']['peak'] * peak_total + rates['En S EV']['night'] * night2_total + rates['En S EV']['ev'] * ev2_total\n",
     "\n",
     "EN_S_EV_total"
@@ -624,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -639,6 +645,7 @@
     }
    ],
    "source": [
+    "# calculate the total cost for EN S DATA\n",
     "EN_S_DATA_total = rates['En S Data']['day'] * day_total + rates['En S Data']['peak'] * peak_total + rates['En S Data']['night'] * night2_total + rates['En S Data']['ev'] * ev2_total\n",
     "\n",
     "EN_S_DATA_total"
@@ -646,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -661,6 +668,7 @@
     }
    ],
    "source": [
+    "# calculate the total cost for EN S Drive\n",
     "EN_S_Drive_total = rates['En S Drive']['day'] * day_total + rates['En S Drive']['peak'] * peak_total + rates['En S Drive']['night'] * night2_total + rates['En S Drive']['ev'] * ev2_total\n",
     "\n",
     "EN_S_Drive_total"
@@ -668,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -683,6 +691,7 @@
     }
    ],
    "source": [
+    "# calculate the total cost for BG S EV DFD\n",
     "BG_S_EV_DFD_total = rates['BG S EV DFD']['day'] * day_total + rates['BG S EV DFD']['peak'] * peak_total + rates['BG S EV DFD']['night'] * night2_total + rates['BG S EV DFD']['ev'] * ev2_total\n",
     "\n",
     "BG_S_EV_DFD_total"
@@ -690,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -705,6 +714,7 @@
     }
    ],
    "source": [
+    "# calculate the total cost for EN S DATA DF\n",
     "EN_S_DATA_DF_total = rates['En S Data DF']['day'] * day_total + rates['En S Data DF']['peak'] * peak_total + rates['En S Data DF']['night'] * night2_total + rates['En S Data DF']['ev'] * ev2_total\n",
     "\n",
     "EN_S_DATA_DF_total"
@@ -712,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -727,6 +737,7 @@
     }
    ],
    "source": [
+    "# calculate the total cost for FG DF S\n",
     "FG_DF_S_total = rates['FG DF S']['day'] * day_total + rates['FG DF S']['peak'] * peak_total + rates['FG DF S']['night'] * night2_total + rates['FG DF S']['ev'] * ev2_total\n",
     "\n",
     "FG_DF_S_total"
@@ -734,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -749,6 +760,7 @@
     }
    ],
    "source": [
+    "# calcuate the total for the previous year\n",
     "olr2024 = rates['2024']['day'] * day_total + rates['2024']['peak'] * peak_total + rates['2024']['night'] * night2_total + rates['2024']['ev'] * ev2_total\n",
     "\n",
     "olr2024"
@@ -833,6 +845,7 @@
     }
    ],
    "source": [
+    "# create a dataframe to compare all rates\n",
     "d = {'Previous Rates':[f\"{olr2024:.2f}\"],\n",
     "     'SSE EV':[f\"{SSE_EV_total:.2f}\"],\n",
     "     'SSE 24':[f\"{SSE_24_total:.2f}\"],\n",
@@ -850,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -897,6 +910,7 @@
     }
    ],
    "source": [
+    "# finding the cheapest rate\n",
     "df[df['Cost'] == df['Cost'].min()]"
    ]
   }
