--- a/electricity_rates/feed_in.ipynb
+++ b/electricity_rates/feed_in.ipynb
@@ -6,18 +6,18 @@
    "source": [
     "# Feed In\n",
     "\n",
-    "This notebook calculates the amount earned through feeding electricity back into the network at "
+    "This notebook calculates the amount earned through feeding electricity back into the network at  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing packages\n",
     "import pandas as pd\n",
     "import numpy as np \n",
-    "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates"
    ]
   },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +84,13 @@
     }
    ],
    "source": [
+    "# Displaying first 5 rows of the 'Read Date and End Time' column\n",
     "export_data_1mc.loc[:,'Read Date and End Time'][:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +194,7 @@
     }
    ],
    "source": [
+    "# Grouping data and extracting export data.\n",
     "data_olr['Date'] = pd.to_datetime(data_olr['Read Date and End Time'], dayfirst=True)\n",
     "grouped_data_olr = data_olr.groupby(['Read Type',pd.Grouper(key='Date', freq='1D')]).sum().reset_index()\n",
     "active_export_olr = grouped_data_olr[grouped_data_olr['Read Type'] == 'Active Export Interval (kWh)']\n",
@@ -202,17 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Grouping data and summing 'Read Value' by day\n",
     "data_olr['Date'] = pd.to_datetime(data_olr['Read Date and End Time'], dayfirst=True)\n",
     "grouped_data_olr = data_olr.groupby(pd.Grouper(key='Date', freq='1D')).sum()['Read Value'].reset_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -224,6 +227,7 @@
     }
    ],
    "source": [
+    "# Calculating total feed-in tariff\n",
     "tariff_1 = 0.24  # Rate for period 1\n",
     "tariff_2 = 0.20  # Rate for period 2\n",
     "olr_tariff_1 = grouped_data_olr[(grouped_data_olr['Date']<='2025-01-12') & (grouped_data_olr['Date']>'2024-01-24')]['Read Value'].sum()\n",
